docs/0.14/_sources/api/gammapy.modeling.models.SkyModel.rst.txt
SkyModel
========

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SkyModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SkyModel.evaluation_radius
      ~SkyModel.frame
      ~SkyModel.name
      ~SkyModel.parameters
      ~SkyModel.position
      ~SkyModel.spatial_model
      ~SkyModel.spectral_model
      ~SkyModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SkyModel.__call__
      ~SkyModel.copy
      ~SkyModel.create
      ~SkyModel.evaluate
      ~SkyModel.evaluate_geom
      ~SkyModel.from_dict
      ~SkyModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: name
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: spatial_model
   .. autoattribute:: spectral_model
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: to_dict
